--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
         image: itzg/minecraft-bedrock-server:latest
         tty: true
         stdin_open: true
+        restart: always
         ports:
             - '0.0.0.0:19132:19132/udp'
         environment:
