lock 1.18 ( https://github.com/itzg/docker-minecraft-bedrock-server/issues/245 )

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         environment:
             TZ: 'Asia/Tokyo'
             EULA: 'TRUE'
-            VERSION: 'LATEST'
+            VERSION: '1.18'
             UID: 1000
             GID: 1000
         volumes:
